# talkToLLM

./: .gitignore  CLAUDE.md  README.md  mcp_server.py  package-lock.json  package.json
.claude/: settings.json
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
desktop/: talkToLLM.desktop
libs/contracts/: package.json  tsconfig.json
scripts/: check_whisper_rocm.py  e2e_live_check.py  launch_desktop.sh  prepare_local_models.py  run_mvp_e2e.sh  stop_stack.sh
services/realtime-api/: .env.example  README.md  pyproject.toml
services/realtime-api/app/: main.py
services/realtime-api/app/api/: protocol.py
services/realtime-api/app/core/: config.py  interruption.py  logging.py  metrics.py  ocr.py  orchestrator.py  session_manager.py  state_machine.py  text.py
services/realtime-api/app/providers/: base.py  factory.py  llm.py  stt.py  tts.py
services/realtime-api/app/study/: db.py  router.py  service.py
services/realtime-api/app/tests/: test_interruption.py  test_llm_provider.py  test_state_machine.py  test_text.py  test_websocket.py
services/realtime-api/app/training/: __init__.py  db.py  distractors.py  models.py  progress.py  router.py  service.py
services/realtime-api/tests/: conftest.py
services/realtime-api/tests/integration/: test_orchestrator.py  test_study_endpoints.py  test_training_endpoints.py  test_websocket.py
services/realtime-api/tests/providers/: test_factory.py  test_llm_provider.py  test_mock_providers.py  test_stt_provider.py
services/realtime-api/tests/unit/: test_answer_checking.py  test_config.py  test_distractors.py  test_logging.py  test_ocr.py  test_progress.py  test_session_manager.py  test_state_machine.py  test_study_service.py  test_text.py  test_training_db.py  test_training_service.py
(+47 files in other folders)
