[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talktollm-realtime-api"
version = "0.1.0"
description = "FastAPI realtime orchestration service for talkToLLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6,<1.0.0",
  "prometheus-client>=0.21.1,<1.0.0",
  "pydantic-settings>=2.7.1,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.25.0,<1.0.0"
]
real = [
  "kokoro>=0.9.4,<1.0.0",
  "numpy>=2.0.0,<3.0.0",
  "openai-whisper>=20250625,<20260000",
  "openai>=2.30.0,<3.0.0",
  "pillow>=10.0.0,<13.0.0",
  "pytesseract>=0.3.13,<1.0.0",
  "soundfile>=0.13.1,<1.0.0",
  "transformers>=4.47.0,<6.0.0"
]
legacy_stt = [
  "faster-whisper>=1.2.1,<2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
